kubernetes/apps/longhorn-system/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
    ns: longhorn-system
