kubernetes/apps/longhorn-system/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-all
  namespace: longhorn-system
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
